Start adding mappings to newcompletionrule